Added all my new pages, changed my icon

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nik Tesija</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <script src="site-footer.js"></script>
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="images/icon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
 </head>
 
 <body>
@@ -27,8 +25,9 @@
         <div class="box-thing">
             <h3>programming</h3>
             <span class="text">
-                I work at Google on Search, making it a pretty website as a front end engineer.
-                This website is my attempt to live life without Figma mocks.
+                I worked at Google on Search, making it a pretty website as a front end engineer.
+                This website is my attempt to live life without Figma mocks or a javascript framework, everything is
+                vanilla js.
             </span>
         </div>
         <div class="box-thing">
@@ -138,9 +137,7 @@
         </div>
     </div>
 
-    <h2 class="final-thought">
-        I hope you liked my website. I spent 2 hours doing this. It looks terrible and I am proud of that
-    </h2>
+    <site-footer></site-footer>
 </body>
 
 </html>
