Allow piano to be used with mouse/touch

--- a/piano.html
+++ b/piano.html
@@ -71,6 +71,7 @@
 
 <body>
    <h1>this is the piano room, play the piano</h1>
+   <p>Use your keyboard to play (asdfghjk are white keys) or click on some keys</p>
 
    <canvas id="oscilloscope" class="analyzer"></canvas>
 
