more modifications to unify my websites

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About</title>
+    <title>about</title>
     <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
     <script src="site-footer.js"></script>
     <style>
