--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nik Tesija</title>
+    <title>nik tesija</title>
     <script src="site-footer.js"></script>
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
 </head>
 
 <body>
-    <img height="300px" width="300px" src="images/portrait.jpg">
-    <div class="header-text">
-        <h1>Nik Tesija</h1>
-        <div class="icon-container">
-            <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank">LinkedIn</a>
-            <a href="mailto:ntesija+website@gmail.com" target="_blank">e-mail me</a>
-        </div>
-    </div>
-
     <div>
+        <h1>nik tesija</h1>
+        <img height="200px" width="200px" src="images/portrait.jpg">
+        <div class="header-text">
+            <div class="icon-container">
+                <a href="https://www.instagram.com/niktesija/" target="_blank">instagram</a>
+                <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank">linkedIn</a>
+                <a href="mailto:ntesija+website@gmail.com" target="_blank">e-mail me</a>
+            </div>
+        </div>
         <h2>things I do</h2>
         <div class="box-thing">
             <h3>programming</h3>
@@ -38,8 +38,7 @@
                 that evoke the same feeling as using the spray can tool in MS Paint (they're ok). I hate my voice but I
                 still sing.
             </span>
-            <a href="https://n.nik.band/" target="_blank">Here is a link to a website with links to other things like my
-                music.</a>
+            <a href="music.html">this is a page with more info about my music.</a>
         </div>
         <div class="box-thing">
             <h3>art</h3>
