made website not have fixed footer I didn't like it anymore

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
     <div>
+        <site-footer></site-footer>
+
         <h1>nik tesija</h1>
         <img height="200px" width="200px" src="images/portrait.jpg">
         <div class="header-text">
@@ -92,15 +94,6 @@
                         It's a fun hobby that results in me using half of the trunk space in my car to store a block of
                         alabaster or marble that I may never use. This is a picture of my first two marble pieces I
                         made.
-                    </span>
-                </div>
-
-                <div class="box-thing">
-                    <h5>molding and casting</h5>
-                    <span class="text">
-                        I also just started to learn how to cast molds of things in plastic, often things I mold out of
-                        clay. I am not quite good enough to share my creations as I keep making bad molds or ugly casts.
-                        Hopefully I will be able to make something cool soon.
                     </span>
                 </div>
             </div>
