--- a/piano.html
+++ b/piano.html
@@ -86,6 +86,8 @@
 </head>
 
 <body>
+   <site-footer></site-footer>
+   
    <h1>this is the piano room, play the piano</h1>
    <p>Use your keyboard to play (asdfghjk are white keys) or click on some keys</p>
 
