--- a/piano.html
+++ b/piano.html
@@ -25,6 +25,7 @@
          justify-content: center;
          height: 180px;
          width: 60px;
+         user-select: none;
       }
 
       .white {
