update the piano room, my websites link, and maybe try and embed sonder

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                 <div class="box-thing row">
                     <div class="multi">
                         <h5><a href="https://www.youtube.com/watch?v=z-lqdYqVWfw">Sonder</a></h5>
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/z-lqdYqVWfw?si=CyITJ4zn0yeSa6xt"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         <span class="text">
                             I made a movie called Sonder. It follows 8 people through San Francisco as they film parts
                             of their day. It arose from me wanting to see what other people were doing with their days
@@ -65,7 +70,7 @@
                 <div class="box-thing row">
                     <div class="multi">
                         <h5>other videos</h5>
-                        <video controls width="300">
+                        <video controls width="560">
                             <source src="images/hi8.mp4" type="video/mp4" />
                         </video>
                         <span class="text">
