--- a/piano.html
+++ b/piano.html
@@ -43,6 +43,7 @@
       }
 
       .oscillator-options {
+         flex-wrap: wrap;
          gap: 16px;
       }
 
@@ -88,7 +89,7 @@
 
 <body>
    <site-footer></site-footer>
-   
+
    <h1>this is the piano room, play the piano</h1>
    <p>Use your keyboard to play (asdfghjk are white keys) or click on some keys</p>
 
