--- a/index.html
+++ b/index.html
@@ -42,93 +42,95 @@
             </span>
             <a href="music.html">this is a page with more info about my music.</a>
         </div>
+
         <div class="box-thing">
-            <h3>art</h3>
-
-            <div class="box-thing">
-                <h4>video</h4>
-                <span class="text">
-                    I often walk around with my hi8 video camera and film random things. I try to capture the essence of
-                    old family videos.
-                </span>
-                <div class="box-thing row">
-                    <div class="multi">
-                        <h5><a href="https://www.youtube.com/watch?v=z-lqdYqVWfw">Sonder</a></h5>
-                        <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/z-lqdYqVWfw?si=CyITJ4zn0yeSa6xt"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                        <span class="text">
-                            I made a movie called Sonder. It follows 8 people through San Francisco as they film parts
-                            of their day. It arose from me wanting to see what other people were doing with their days
-                            as I was feeling like I was not doing enough. It was really uplifting to see that everyone
-                            else was doing just about the same things I was doing too.
-                        </span>
-                    </div>
-                </div>
-                <div class="box-thing row">
-                    <div class="multi">
-                        <h5>other videos</h5>
-                        <video controls width="560">
-                            <source src="images/hi8.mp4" type="video/mp4" />
-                        </video>
-                        <span class="text">
-                            This is a video I took of random things including me and the streets of San Francisco. I
-                            have a
-                            lot of videos like this because I often get bored and wander around the city.
-                        </span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box-thing">
-                <h4>3d stuff</h4>
-                <span class="text">
-                    My brother is an amazing 2d artist so I wanted to do something different. I decided to begin
-                    learning some 3d arts. .
-                </span>
-
-                <div class="box-thing">
-                    <h5>sculpting</h5>
-                    <img width="300px" src="images/marble.jpg" alt="an abstract sculpture made from marble">
-                    <img width="300px" src="images/other_marble.jpg"
-                        alt="a sculpture made from marble showing a nude male figure">
+            <h3>video</h3>
+            <span class="text">
+                I often walk around with my hi8 video camera and film random things. I try to capture the essence of
+                old family videos.
+            </span>
+            <div class="box-thing row">
+                <div class="multi">
+                    <h4>Sonder</h4>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/z-lqdYqVWfw?si=CyITJ4zn0yeSa6xt"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <span class="text">
-                        I recently started learning to sculpt stone.
-                        It's a fun hobby that results in me using half of the trunk space in my car to store a block of
-                        alabaster or marble that I may never use. This is a picture of my first two marble pieces I
-                        made.
+                        I made a movie called Sonder. It follows 8 people through San Francisco as they film parts
+                        of their day. It arose from me wanting to see what other people were doing with their days
+                        as I was feeling like I was not doing enough. It was really uplifting to see that everyone
+                        else was doing just about the same things I was doing too.
                     </span>
                 </div>
             </div>
+            <div class="box-thing row">
+                <div class="multi">
+                    <h4>A trip to Bristol</h4>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Oy_Cs-1m_GA?si=Z303Am6Ql-HwPU3l"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <span class="text">
+                        This is a video of a trip I took to Bristol. I have moved to London and am enjoying exploring
+                        the surrounding countries. I added some very simple music over top of the video because it felt
+                        like it needed some ambient music.
+                    </span>
+                </div>
+            </div>
+            <div class="box-thing row">
+                <div class="multi">
+                    <h4>other videos</h4>
+                    <video controls width="560">
+                        <source src="images/hi8.mp4" type="video/mp4" />
+                    </video>
+                    <span class="text">
+                        This is a video I took of random things including me and the streets of San Francisco. I
+                        have a
+                        lot of videos like this because I often get bored and wander around the city.
+                    </span>
+                </div>
+            </div>
+        </div>
 
-            <div class="box-thing">
-                <h4>photo</h4>
-                <span class="text">
-                    I take pictures on 35mm film cameras for fun. Mostly of my friends, but some times I take pictures
-                    of
-                    other
-                    things too.
-                </span>
-                <div class="box-thing row">
-                    <div class="multi">
-                        <img width="300px" src="images/telephones.jpg" alt="a 35mm photo of some payphones">
-                        <span class="text">
-                            This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie to
-                            see
-                            that this stuff is still lying around. I had a realization recently that I don't think I
-                            ever
-                            actually used a pay phone as a kid.
-                        </span>
-                    </div>
-                    <div class="multi">
-                        <img width="300px" src="images/picnik.jpg" alt="a 35mm photo of a picnic">
-                        <span class="text">
-                            My parents visit me sometimes and I like to record those moments. Here is us having a
-                            picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
-                        </span>
-                    </div>
+        <div class="box-thing">
+            <h3>sculpting</h3>
+            <img width="300px" src="images/marble.jpg" alt="an abstract sculpture made from marble">
+            <img width="300px" src="images/other_marble.jpg"
+                alt="a sculpture made from marble showing a nude male figure">
+            <span class="text">
+                I recently started learning to sculpt stone.
+                It's a fun hobby that results in me using half of the trunk space in my car to store a block of
+                alabaster or marble that I may never use. This is a picture of my first two marble pieces I
+                made.
+            </span>
+        </div>
+
+        <div class="box-thing">
+            <h3>photo</h3>
+            <span class="text">
+                I take pictures on 35mm film cameras for fun. Mostly of my friends, but some times I take pictures
+                of
+                other
+                things too.
+            </span>
+            <div class="box-thing row">
+                <div class="multi">
+                    <img width="300px" src="images/telephones.jpg" alt="a 35mm photo of some payphones">
+                    <span class="text">
+                        This is a picture I took on film of some payphones near Morro Bay. Kinda cool and eerie to
+                        see
+                        that this stuff is still lying around. I had a realization recently that I don't think I
+                        ever
+                        actually used a pay phone as a kid.
+                    </span>
+                </div>
+                <div class="multi">
+                    <img width="300px" src="images/picnik.jpg" alt="a 35mm photo of a picnic">
+                    <span class="text">
+                        My parents visit me sometimes and I like to record those moments. Here is us having a
+                        picnic in Napa. We ate a lot of bread and cheese and drank a lot of wine.
+                    </span>
                 </div>
             </div>
         </div>
