Added videos page and moved some stuff around

--- a/index.html
+++ b/index.html
@@ -44,53 +44,12 @@
         </div>
 
         <div class="box-thing">
-            <h3>video</h3>
+            <h3>videos</h3>
             <span class="text">
                 I often walk around with my hi8 video camera and film random things. I try to capture the essence of
                 old family videos.
             </span>
-            <div class="box-thing row">
-                <div class="multi">
-                    <h4>Sonder</h4>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/z-lqdYqVWfw?si=CyITJ4zn0yeSa6xt"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <span class="text">
-                        I made a movie called Sonder. It follows 8 people through San Francisco as they film parts
-                        of their day. It arose from me wanting to see what other people were doing with their days
-                        as I was feeling like I was not doing enough. It was really uplifting to see that everyone
-                        else was doing just about the same things I was doing too.
-                    </span>
-                </div>
-            </div>
-            <div class="box-thing row">
-                <div class="multi">
-                    <h4>A trip to Bristol</h4>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Oy_Cs-1m_GA?si=Z303Am6Ql-HwPU3l"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <span class="text">
-                        This is a video of a trip I took to Bristol. I have moved to London and am enjoying exploring
-                        the surrounding countries. I added some very simple music over top of the video because it felt
-                        like it needed some ambient music.
-                    </span>
-                </div>
-            </div>
-            <div class="box-thing row">
-                <div class="multi">
-                    <h4>other videos</h4>
-                    <video controls width="560">
-                        <source src="images/hi8.mp4" type="video/mp4" />
-                    </video>
-                    <span class="text">
-                        This is a video I took of random things including me and the streets of San Francisco. I
-                        have a
-                        lot of videos like this because I often get bored and wander around the city.
-                    </span>
-                </div>
-            </div>
+            <a href="videos.html">this is a page with more info about my videos.</a>
         </div>
 
         <div class="box-thing">
