major overhaul of stonesculptures and added jerry

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 that evoke the same feeling as using the spray can tool in MS Paint (they're ok). I hate my voice but I
                 still sing.
             </span>
+            <br />
             <a href="music.html">this is a page with more info about my music.</a>
         </div>
 
@@ -49,20 +50,18 @@
                 I often walk around with my hi8 video camera and film random things. I try to capture the essence of
                 old family videos.
             </span>
+            <br />
             <a href="videos.html">this is a page with more info about my videos.</a>
         </div>
 
         <div class="box-thing">
-            <h3>sculpting</h3>
-            <img width="300px" src="images/marble.jpg" alt="an abstract sculpture made from marble">
-            <img width="300px" src="images/other_marble.jpg"
-                alt="a sculpture made from marble showing a nude male figure">
+            <h3>stone sculptures</h3>
             <span class="text">
-                I recently started learning to sculpt stone.
-                It's a fun hobby that results in me using half of the trunk space in my car to store a block of
-                alabaster or marble that I may never use. This is a picture of my first two marble pieces I
-                made.
+                I recently started learning to sculpt stone. I'm still finding my style but enjoying the process
             </span>
+            <br />
+            <a href="stone-sculptures.html">this is a page with more info about my sculptures. contians some nsfw
+                images</a>
         </div>
 
         <div class="box-thing">
