update email address

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="icon-container">
                 <a href="https://www.instagram.com/niktesija/" target="_blank">instagram</a>
                 <a href="https://www.linkedin.com/in/nicholas-tesija/" target="_blank">linkedIn</a>
-                <a href="mailto:ntesija+website@gmail.com" target="_blank">e-mail me</a>
+                <a href="mailto:contact@nik.horse" target="_blank">e-mail me</a>
             </div>
         </div>
         <h2>things I do</h2>
