--- a/websites.html
+++ b/websites.html
@@ -21,8 +21,8 @@
 
    <p>
       do you like this website? do you want one for yourself? I can make you a website like this. please
-      <a href="mailto:ntesija+website@gmail.com?subject=i want a website like the one you made please"
-         target="_blank">e-mail me</a>
+      <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please" target="_blank">e-mail
+         me</a>
       and I will work with you on making a website similar to this (or better!).
    </p>
 
