added background textures and 90ified my page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,9 @@
     <script src="site-footer.js"></script>
     <style>
         body {
-            background: #beecf7;
+            background: #92aeb5;
+            background-image: url("background-textures/Elements_14-256x256.png");
+            background-blend-mode: screen;
         }
     </style>
 </head>
