--- a/music.html
+++ b/music.html
@@ -10,6 +10,8 @@
    <style>
       body {
          background: #f7bef5;
+         background-image: url("background-textures/Elements_15-256x256.png");
+         background-blend-mode: soft-light;
       }
    </style>
 </head>
