--- a/piano.html
+++ b/piano.html
@@ -9,7 +9,9 @@
    <script src="site-footer.js"></script>
    <style>
       body {
-         background: #a7ffbe;
+         background: #d6afaf;
+         background-image: url(background-textures/Brick_02-256x256.png);
+         background-blend-mode: overlay;
       }
 
       .piano {
