--- a/stone-sculptures.html
+++ b/stone-sculptures.html
@@ -9,7 +9,9 @@
    <script src="site-footer.js"></script>
    <style>
       body {
-         background: #d3ebe2;
+         background: #b3b3b3;
+         background-image: url("background-textures/Elements_08-256x256.png");
+         background-blend-mode: overlay;
       }
 
       .container {
