--- a/websites.html
+++ b/websites.html
@@ -10,6 +10,8 @@
    <style>
       body {
          background: #ecb474;
+         background-image: url("background-textures/Elements_17-256x256.png");
+         background-blend-mode: screen;
       }
    </style>
 </head>
@@ -18,6 +20,10 @@
    <site-footer></site-footer>
 
    <h1>websites</h1>
+
+   <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please" target="_blank">
+      <img src="images/email.gif" height="31" width="88" alt="email image, clicking links to my email">
+   </a>
 
    <p>
       do you like this website? do you want one for yourself? I can make you a website like this. please
