--- a/friends.html
+++ b/friends.html
@@ -10,6 +10,8 @@
    <style>
       body {
          background: #bfba9e;
+         background-image: url(background-textures/Grass_23-256x256.png);
+         background-blend-mode: overlay;
       }
    </style>
 </head>
