--- a/videos.html
+++ b/videos.html
@@ -9,7 +9,9 @@
    <script src="site-footer.js"></script>
    <style>
       body {
-         background: #de8a8a;
+         background: #f2b1b1;
+         background-image: url("background-textures/Elements_05-256x256.png");
+         background-blend-mode: screen;
       }
 
       .container {
