preload all images

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>about</title>
     <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
+    <link rel="preload" href="background-textures/Elements_14-256x256.png" as="image" />
     <script src="site-footer.js"></script>
     <style>
         body {
