--- a/friends.html
+++ b/friends.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>friends</title>
    <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
+   <link rel="preload" href="background-textures/Grass_23-256x256.png" as="image" />
    <script src="site-footer.js"></script>
    <style>
       body {
