--- a/piano.html
+++ b/piano.html
@@ -6,11 +6,12 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>piano</title>
    <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
+   <link rel="preload" href="background-textures/Brick_02-256x256.png" as="image" />
    <script src="site-footer.js"></script>
    <style>
       body {
          background: #d6afaf;
-         background-image: url(background-textures/Brick_02-256x256.png);
+         background-image: url("background-textures/Brick_02-256x256.png");
          background-blend-mode: overlay;
       }
 
