trying out 100vh

--- a/friends.html
+++ b/friends.html
@@ -13,6 +13,7 @@
          background: #bfba9e;
          background-image: url(background-textures/Grass_23-256x256.png);
          background-blend-mode: overlay;
+         height: 100vh;
       }
    </style>
 </head>
