--- a/music.html
+++ b/music.html
@@ -13,6 +13,7 @@
          background: #f7bef5;
          background-image: url("background-textures/Elements_15-256x256.png");
          background-blend-mode: soft-light;
+         height: 100vh;
       }
    </style>
 </head>
