--- a/piano.html
+++ b/piano.html
@@ -13,6 +13,7 @@
          background: #d6afaf;
          background-image: url("background-textures/Brick_02-256x256.png");
          background-blend-mode: overlay;
+         height: 100vh;
       }
 
       .piano {
