--- a/stone-sculptures.html
+++ b/stone-sculptures.html
@@ -13,6 +13,7 @@
          background: #b3b3b3;
          background-image: url("background-textures/Elements_08-256x256.png");
          background-blend-mode: overlay;
+         height: 100vh;
       }
 
       .container {
