--- a/videos.html
+++ b/videos.html
@@ -13,6 +13,7 @@
          background: #f2b1b1;
          background-image: url("background-textures/Elements_05-256x256.png");
          background-blend-mode: screen;
+         height: 100vh;
       }
 
       .container {
