--- a/websites.html
+++ b/websites.html
@@ -13,6 +13,7 @@
          background: #ecb474;
          background-image: url("background-textures/Elements_17-256x256.png");
          background-blend-mode: screen;
+         height: 100vh;
       }
    </style>
 </head>
