--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
             background: #92aeb5;
             background-image: url("background-textures/Elements_14-256x256.png");
             background-blend-mode: screen;
+            height: 100vh;
         }
     </style>
 </head>
