update to make myself look a little better

--- a/websites.html
+++ b/websites.html
@@ -3,10 +3,16 @@
 
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport"
+         content="width=device-width, initial-scale=1">
    <title>websites</title>
-   <link rel="icon" href="images/favicon.ico" type="image/ico" sizes="16x16">
-   <link rel="preload" href="background-textures/Elements_17-256x256.png" as="image" />
+   <link rel="icon"
+         href="images/favicon.ico"
+         type="image/ico"
+         sizes="16x16">
+   <link rel="preload"
+         href="background-textures/Elements_17-256x256.png"
+         as="image" />
    <script src="site-footer.js"></script>
    <style>
       body {
@@ -14,6 +20,12 @@
          background-image: url("background-textures/Elements_17-256x256.png");
          background-blend-mode: screen;
          height: 100vh;
+      }
+
+      .text-area {
+         background-color: #ffe48c;
+         padding: 2px;
+         width: fit-content;
       }
    </style>
 </head>
@@ -23,35 +35,42 @@
 
    <h1>websites</h1>
 
-   <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please" target="_blank">
-      <img src="images/email.gif" height="31" width="88" alt="email image, clicking links to my email">
+   <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please"
+      target="_blank">
+      <img src="images/email.gif"
+           height="31"
+           width="88"
+           alt="email image, clicking links to my email">
    </a>
 
-   <p>
-      do you like this website? do you want one for yourself? I can make you a website like this. please
-      <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please" target="_blank">e-mail
-         me</a>
-      and I will work with you on making a website similar to this (or better!).
-   </p>
+   <div class="text-area">
+      <p>
+         do you like this website? do you want one for yourself? I can make you a website like this. please
+         <a href="mailto:contact@nik.horse?subject=i want a website like the one you made please"
+            target="_blank">e-mail
+            me</a>
+         and I will work with you on making a website similar to this (or better!).
+      </p>
 
-   <p>things I can do</p>
-   <ul>
-      <li>design website</li>
-      <li>make website</li>
-      <li>host website</li>
-      <li>maintain website</li>
-   </ul>
+      <p>things I can do</p>
+      <ul>
+         <li>design website</li>
+         <li>make website</li>
+         <li>host website</li>
+         <li>maintain website</li>
+      </ul>
 
-   <p>qualifications</p>
-   <ul>
-      <li>I worked at Google for 5 years, half of which was on Google Search</li>
-      <li>I made this website</li>
-      <li>I have a computer science degree from the university of michigan</li>
-      <li>I want money</li>
-      <li>seriously, go look at the <a href="piano.html">piano room</a>, it's really cool I did that all from scratch
-      </li>
-   </ul>
-
+      <p>qualifications</p>
+      <ul>
+         <li>I worked at Google for 5 years, half of which was on Google Search</li>
+         <li>I made this website</li>
+         <li>I have a computer science degree from the university of michigan</li>
+         <li>I want money</li>
+         <li>seriously, go look at the <a href="piano.html">piano room</a>, it's really cool I did that all from scratch
+         </li>
+      </ul>
+   </div>
+   
    <site-footer></site-footer>
 </body>
 
